AUT-1294 Avoid country code flicker and hide empty icons

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -1181,3 +1181,8 @@ button.link:hover{
     display: inline-flex;
     align-items: center;
 }
+.active-sessions__session-flag:not([src]),
+.device-info__icon:not([src]),
+.browser-info__icon:not([src]) {
+    display: none;
+}
